# python-wex-addon-filestate

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: config.yml
.wex/python/: .last-commit
wexample_wex_addon_app/const/: globals.py  types.py
wexample_wex_addon_app/options_values/: readme_content_option_value.py
wexample_wex_addon_app/utils/: AppDirectoryStructure.py  app_directory_structure.py
wexample_wex_addon_app/workdir/: app_workdir.py
wexample_wex_addon_filestate/: filestate_addon_manager.py
wexample_wex_filestate/commands/state/: rectify.py
