[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wexample-wex-addon-filestate"
version = "0.0.1"
description = "App management with wex"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pip-tools",
    "pydantic",
    "wexample-wex-core",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-wex-addon-app"

[project.optional-dependencies]
dev = ["pytest"]
