[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-addon-filestate"
version = "0.0.1"
description = "App management with wex"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "wexample-wex-core",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-wex-addon-app"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pdm.build]
includes = ["src/python_package_workdir/py.typed"]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "python_package_workdir"
from = "src"
